Fix z-index.

--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -58,7 +58,7 @@
     }
 
     .right {
-      .header-img {
+      .header-image {
         position: relative;
         top: 0;
         right: 0;
@@ -168,12 +168,12 @@
 
   .our-team {
     margin-top: 100px;
-    position: relative;
-    z-index: 5;
 
     .width-container {
       .content-wrapper {
         display: flex;
+        position: relative;
+        z-index: 5;
         border-left: 2px solid $gray;
         border-right: 2px solid $gray;
         padding: 0 63px;
@@ -226,7 +226,6 @@
             margin-bottom: 25px;
           }
         }
-
       }
     }
 
@@ -236,7 +235,6 @@
       height: 398px;
       width: 100%;
       background-color: $yellow;
-      margin-bottom: -290px;
     }
   }
 
@@ -280,6 +278,7 @@
                   font-size: $font-size-small-regular;
                   font-weight: bold;
                   width: 130px;
+                  cursor: pointer;
 
                   &:not(:last-child) {
                     margin-bottom: 30px;
@@ -289,6 +288,7 @@
                     font-size: $font-size-regular;
                     font-weight: normal;
                     width: 145px;
+                    transition: all 120ms cubic-bezier(.165,.84,.44,1);
                   }
                 }
 
